repo 경로 지정. 명시적으로 add, commit, push 명령 repo 경로에서 실행하도록 수정.